# agent_implement

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt  travel.yaml  travel_quebec_7day.yaml  web.yaml
agents/agentdojo/: README.md  agent.yaml  environment.yaml
agents/assistant/: agent.yaml  planner.yaml  skills.yaml  tools.yaml
agents/deep_research/: agent.yaml  environment.yaml  planner.yaml  skills.yaml  tools.yaml
agents/email/: agent.yaml  environment.yaml  middleware.yaml  planner.yaml  skills.yaml  tools.yaml
agents/paper_summary/: agent.yaml  environment.yaml  middleware.yaml  planner.yaml  skills.yaml  tools.yaml
agents/tool_qa/: agent.yaml  environment.yaml  planner.yaml  skills.yaml  tools.yaml
agents/travel/: agent.yaml  environment.yaml  planner.yaml  skills.yaml  tools.yaml
agents/web/: agent.yaml  environment.yaml  planner.yaml  skills.yaml
agents/web_update_readme/: agent.yaml  environment.yaml  planner.yaml  skills.yaml  tools.yaml
assistant/: assistant.yaml
deep_research/: deep_research.yaml
email/: email.yaml
paper_summary/: paper_summary.yaml
simulated_envs/: virtual_mailbox.json
skills/calculator_assistant/: skill.yaml
skills/deep_research/: skill.yaml
skills/email_workflow/: skill.yaml
skills/github_issue_workflow/: skill.yaml
skills/github_readme_update/: skill.yaml
skills/paper_summary/: skill.yaml
skills/source_grounded_qa/: skill.yaml
src/: infect.py
tool_qa/: tool_qa.yaml
travel/: travel.yaml
web/: web.yaml  web_update_readme.yaml
(+21 files in other folders)
